Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20014

tgt_clean_by_tag()) ASSERTION( (!(tgt_is_increasing_xid_client(exp)) || (trd->trd_reply.lrd_xid <= xid)) ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      req_can_reconstruct() can return -EPROTO which should be accounted in all related calls. Right now there are two places where discrepancies are possible:

      1. in tgt_handle_recovery() it is checked for 1 only, assuming 0 otherwise which is not true
      2. in tgt_check_resent() it is checked for not 0 case assuming it is 1 which is also not true

            tappro Mikhail Pershin
            tappro Mikhail Pershin
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: