LU-20014 tgt: prevent requests on the same slot

Don't process a request with lesser XID on the occupied
slot, mark it as obsoleted instead

Take into account -EPROTO possible return from
req_can_reconstruct() in tgt_handle_recovery() and
in tgt_check_resent().

Fixes: 23773b32bf ("LU-11444 ptlrpc: resend may corrupt the data")
Signed-off-by: Mikhail Pershin <mpershin@whamcloud.com>
Change-Id: Ied07bb060b0fcf4ab4c35456ab474291dfba4842
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64648
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>